add timeless hrm, combos, and mod morphs

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,4 +5,13 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 
+# Set sleep timeout to 30min (30*60*1000ms)
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# Enable mouse
+CONFIG_ZMK_POINTING=y
+
+# Bluetooth tweaks
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
