--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -26,8 +26,8 @@ ZMK_COMBO(lt,    &kp LT,       LT2 LT3,     DEF     NUM, COMBO_TERM_FAST, COMBO_
 ZMK_COMBO(lbkt,  &kp LBKT,     RT1 RT2,     DEF     NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(rbkt,  &kp RBKT,     RT2 RT3,     DEF     NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(lpar,  &kp LPAR,     RM1 RM2,     DEF     NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST, RS(LCTRL), KEYS_L)
-ZMK_COMBO(rpar,  &kp RPAR,     RM2 RM3,     DEF     NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST, RC(LALT), KEYS_L)
+ZMK_COMBO_8(lpar,  &kp LPAR,     RM1 RM2,     DEF     NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST, RS(LCTRL), KEYS_L)
+ZMK_COMBO_8(rpar,  &kp RPAR,     RM2 RM3,     DEF     NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST, RC(LALT), KEYS_L)
 
 ZMK_COMBO(lbrc,  &kp LBRC,     RB1 RB2,     DEF     NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(rbrc,  &kp RBRC,     RB2 RB3,     DEF     NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
