--- a/config/west.yml
+++ b/config/west.yml
@@ -1,4 +1,7 @@
 manifest:
+  defaults:
+    remote: urob
+    revision: v0.3 # Pin everything to v0.3
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
@@ -9,16 +12,13 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
       import: app/west.yml
+    # ZMK modules
     - name: zmk-helpers
-      remote: urob
-      revision: main # set to same version as zmk
+      path: modules/zmk/helpers
     - name: zmk-auto-layer
-      remote: urob
-      revision: main
+      path: modules/zmk/auto-layer
     - name: zmk-tri-state
-      remote: urob
-      revision: main
+      path: modules/zmk/tri-state
   self:
     path: config
